fix(Ads): Fix playback of overlays ads on mobile devices (#9078)
Allow pressing the big play button when there is an overlay.
Only play the overlay when the main one is playing.

--- a/ui/less/containers.less
+++ b/ui/less/containers.less
@@ -246,6 +246,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  z-index: 1;
 }
 
 .shaka-statistics-container {
